# SOP-Robot

./: .envrc  .gitattributes  .gitignore  .gitmodules  ALANS-INMOOV.md  Behavior_tree.drawio  Dynamixel_XL-320.stl  FollowJointTrajectory.action  GETTING-STARTED.md  LICENSE  Makefile  README.md  Simple block diagram.drawio  Start_real_robot  UML  UML_diagram.drawio  Untitled Diagram.drawio  VISUALIZATION.md  Vagrantfile  build.sh  config.json  copy-ros-headers.sh  db.sqlite3  dynamixel-test.launch  hand_action_client.py  hand_action_server.py  head_controller.launch  helper_functions.py  how_to_use.txt  launch_demo.sh  pixi.toml  pyproject.toml  pyrightconfig.json  recognition.py  requirements.txt  sentence_tokenizer.pickle  sop-robot.code-workspace  speech_rec_chatbot_requirements.txt  start_fake_robot  start_robot_head  (+3 more)
mic_array/: package.xml
mic_array/src/: utils.py
mic_array/src/scripts/: gentaskfile.py  getGenders.py
src/arm_pack/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/arm_pack/action/: test.action
src/arm_pack/arm_pack/: arm_node.py
src/dynamixel-controllers/: CMakeLists.txt  README.md  package.xml
src/dynamixel-controllers/include/dynamixel-controllers/: controller.h  trajectory_generator.h
src/dynamixel-controllers/src/: controller.cpp  find_dynamixel.cpp  trajectory_generator.cpp
src/emotion_detection/: package.xml  readme.md  setup.cfg  setup.py
src/emotion_detection/emotion_detection/: action_client.py  emotion_detection.py  face_detection.py
src/emotion_detection/launch/: main.launch.py
src/face_tracker/: package.xml  readme.md  setup.cfg  setup.py
src/face_tracker/face_tracker/: face.py  face_analyzer.py  face_recognition.py  face_tracker_node.py  links_cluster.py  lip_movement_net.py  mock_face_tracker_node.py  phone_detection.py  test_links_cluster.py  webcam_node.py
src/face_tracker/launch/: face_tracker.test.launch.py
src/face_tracker/models/: the_shape_predictor_is_from_the_dlib_project.txt
src/inmoov_description/: CMakeLists.txt  LICENSE.txt  inmoov.urdf  inmoov_head.urdf  launch_rviz.sh  package.xml  urdf.rviz
src/inmoov_description/config/: config.yaml  inmoov.rviz  inmoov.srdf  moveit_inmoov.rviz
src/inmoov_description/launch/: display.launch  gazebo.launch  moveit-display.launch
src/inmoov_description/robots/: head.ros2_control.xacro  head.ros2_control_old.xacro  inmoov.urdf.xacro  inmoov.urdf_old.xacro  inmoov_eyes_control.urdf.xacro  inmoov_face.urdf.xacro  inmoov_head_control.urdf.xacro  inmoov_jaw_control.urdf.xacro  inmoov_right_hand.urdf.xacro  robot.ros2_control.xacro
src/inmoov_description/urdf/: asmArm.urdf.xacro  asmBase.urdf.xacro  asmEye.urdf.xacro  asmFace.urdf.xacro  asmHand.urdf.xacro  asmHead.urdf.xacro  asmTorso.urdf.xacro  config.inertial.urdf.xacro  config.joints.urdf.xacro  inmoov-moveit-gazebo.urdf  inmoov.gazebo  materials.urdf.xacro
src/leuka/leuka/: CMakeLists.txt  package.xml  servo_pub.cpp
src/leuka/leuka/firmware/: CMakeLists.txt  servo.cpp
src/leuka/leuka/scripts/: aanteet.py  formantit2.py  puhetta_kiitos.py  tts.py
src/robot/: CMakeLists.txt  package.xml
src/robot/action/: Test.action
src/robot/controllers/: head.yaml  head_old.yaml  robot.yaml  start_positions.yaml
src/robot/launch/: launch_utils.py  robot.fake.launch.py  robot.fake.launch2.py  robot.launch.py
src/robot/test/: test_launch_utils.py
src/robot_hardware/: CMakeLists.txt  package.xml  robot_hardware.xml
src/robot_hardware/include/robot_hardware/: arduino_comms.hpp  robot_hardware.hpp  visibility_control.h
src/robot_hardware/src/: robot_hardware.cpp
src/sop_robot_bringup/robot/: CMakeLists.txt  package.xml
src/sop_robot_bringup/robot/action/: Test.action
src/sop_robot_bringup/robot/config/: robot_stack.defaults.yaml
src/sop_robot_bringup/robot/controllers/: launch_utils.py  robot.yaml  start_positions.yaml
src/sop_robot_bringup/robot/launch/: robot.fake.launch.py  robot.launch.py
src/sop_robot_common/: package.xml  setup.cfg  setup.py
src/sop_robot_common/resource/: sop_robot_common
src/sop_robot_common/sop_robot_common/: __init__.py  arm_actions.py  contracts.py  joint_calibration.py  shoulder_calibration.py
src/sop_robot_common/test/: test_arm_actions.py  test_contracts.py  test_joint_calibration.py
src/sop_robot_gui/chatbot_app/: README.md  package.xml  setup.cfg  setup.py
src/sop_robot_gui/chatbot_app/chatbot_app/: __init__.py  arms.py  calibration_app.py  config.py  image_viewer.py  main.py  ros_app.py  ros_bridge.py  rviz_embed.py  ui_common.py  unified_app.py
src/sop_robot_gui/chatbot_app/launch/: voice_stack.launch.py  voice_stack_with_unified_app.launch.py
src/sop_robot_gui/chatbot_app/resource/: chatbot_app
src/sop_robot_perception/face_tracker/: package.xml  readme.md  setup.py
src/sop_robot_perception/face_tracker/face_tracker/: face.py  face_analyzer.py  face_recognition.py  face_tracker_node.py  identity_store.py  links_cluster.py  lip_movement_net.py  (+3 more)
src/sop_robot_perception/face_tracker_movement/: package.xml  setup.py
src/sop_robot_voice/tts_package/: README.md  package.xml  setup.cfg  setup.py
src/speech_python/: package.xml  setup.cfg  setup.py
src/speech_python/speech_python/: action_server_cpp.cpp  get_index.py  main.py  publisher_member_function.py  record.py  speech_rec.py  speech_rec_client_async.py  speech_rec_service.py
src/tts_package/: README.md  package.xml  setup.cfg  setup.py
src/tts_package/tts_package/: tts_member_function.py  tts_node.py
src/unified_robot_control/: README.md  package.xml  setup.cfg  setup.py
src/unified_robot_control/unified_robot_control/: unified_robot_control_node.py
src/voice_chatbot_ros/: package.xml  setup.cfg  setup.py
src/voice_chatbot_ros/launch/: voice_chatbot.launch.py
src/voice_chatbot_ros/voice_chatbot/: __init__.py  app.py  audio_io.py  chatbot.py  config.py  llm.py  platform_setup.py  ros_app.py  setup_models.py  stt.py  tts_engine.py  ui_common.py  vad.py
src/voice_chatbot_ros/voice_chatbot_ros/: __init__.py  _base.py  llm_node.py  node.py  stt_node.py  tts_node.py
(+452 files in other folders)
