<?xml version="1.0"?>
<package format="2">
  <name>mic_array</name>
  <version>0.0.0</version>
  <description>The mic_array package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="kpalokan@student.oulu.fi">Kalle Palokangas</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>BSD</license>


  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/mic_array</url> -->


  <!-- Author tags are optional, multiple are allowed, one per tag -->
  <!-- Authors do not have to be maintainers, but could be -->
  <!-- Example: -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->


  <!-- The *depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use depend as a shortcut for packages that are both build and exec dependencies -->
  <!--   <depend>roscpp</depend> -->
  <!--   Note that this is equivalent to the following: -->
  <!--   <build_depend>roscpp</build_depend> -->
  <!--   <exec_depend>roscpp</exec_depend> -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use build_export_depend for packages you need in order to build against this package: -->
  <!--   <build_export_depend>message_generation</build_export_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use exec_depend for packages you need at runtime: -->
  <!--   <exec_depend>message_runtime</exec_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <!-- Use doc_depend for packages you need only for building documentation: -->
  <!--   <doc_depend>doxygen</doc_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>struct</build_depend>
  <build_depend>time</build_depend>
  <build_depend>datetime</build_depend>
  <build_depend>wave</build_depend>
  <build_depend>os</build_depend>
  <build_depend>multiprocessing</build_depend>
  <build_depend>sys</build_depend>
  <build_depend>usb.core</build_depend>
  <build_depend>usb.util</build_depend>
  <build_depend>numpy</build_depend>
  <build_depend>pyaudio</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>struct</build_export_depend>
  <build_export_depend>time</build_export_depend>
  <build_export_depend>datetime</build_export_depend>
  <build_export_depend>wave</build_export_depend>
  <build_export_depend>os</build_export_depend>
  <build_export_depend>multiprocessing</build_export_depend>
  <build_export_depend>sys</build_export_depend>
  <build_export_depend>usb.core</build_export_depend>
  <build_export_depend>usb.util</build_export_depend>
  <build_export_depend>numpy</build_export_depend>
  <build_export_depend>pyaudio</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>struct</exec_depend>
  <exec_depend>time</exec_depend>
  <exec_depend>datetime</exec_depend>
  <exec_depend>wave</exec_depend>
  <exec_depend>os</exec_depend>
  <exec_depend>multiprocessing</exec_depend>
  <exec_depend>sys</exec_depend>
  <exec_depend>usb.core</exec_depend>
  <exec_depend>usb.util</exec_depend>
  <exec_depend>pyaudio</exec_depend>
  <exec_depend>numpy</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
