<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>emotion_detection</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="vagrant@todo.todo">vagrant</maintainer>
  <license>TODO: License declaration</license>

  <!-- to install dependecies -->
  <!--add extra dash to longname args -->
  <!--$ rosdep install -from-paths src -y -ignore-src -->

  <!--OR install them manually using apt -->

  <!-- to uninstall dependencies -->
  <!-- $ sudo -H pip3 uninstall keras -->

  <depend>rclpy</depend>
  <depend>cv_bridge</depend>
  <depend>python3-opencv</depend>
  <depend>python3-numpy</depend>
  <depend>python-tensorflow-pip</depend>

  <!-- interfaces -->
  <depend>sensor_msgs</depend>
  <depend>control_msgs</depend>
  <depend>std_msgs</depend>
  <depend>test_msgs</depend>
  <depend>ros2launch</depend>



  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
