<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sop_robot_common</name>
  <version>0.1.0</version>
  <description>Shared contracts and conventions for the SOP Robot runtime packages.</description>
  <maintainer email="sop-robot@example.org">SOP Robot Team</maintainer>
  <license>MIT</license>

  <depend>voice_stack_common</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
