<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>speech_python</name>
  <version>0.0.0</version>
  <description>Publisher/Subscriber speech recognition module with rclpy</description>
  <maintainer email="jruntti20@student.oulu.fi">vagrant</maintainer>
  <license>Apache License 2.0</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>python-pyaudio</exec_depend>
  <exec_depend>python-speechrecognition-pip</exec_depend>
  <!--<exec_depend>speech_recognition_msgs</exec_depend>-->
  <!--<exec_depend>audio_common_msgs</exec_depend>-->
  <exec_depend>tf2</exec_depend>
  <exec_depend>portaudio19-dev</exec_depend>
  <exec_depend>angles</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>python3-pocketsphinx-pip</exec_depend>
  <!--<exec_depend>python3-webrtcvad-pip</exec_depend>-->
  <exec_depend>python3-requests</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
