<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>speech_python</name>
  <version>0.0.0</version>
  <description>Publisher/Subscriber speech recognition module with rclpy</description>
  <maintainer email="jruntti20@student.oulu.fi">vagrant</maintainer>
  <license>Apache License 2.0</license>

  <depend>rclpy</depend>
      <!--<depend>rclcpp</depend>-->
  <depend>msg_interface</depend>
  <depend>python-pyaudio</depend>
  <depend>python-speechrecognition-pip</depend>
  <!--<exec_depend>speech_recognition_msgs</exec_depend>-->
  <!--<exec_depend>audio_common_msgs</exec_depend>-->
    <!--<depend>tf2</depend>-->
  <depend>portaudio19-dev</depend>
    <!--<depend>angles</depend>-->
    <!--<depend>geometry_msgs</depend>-->
  <depend>python3-pocketsphinx-pip</depend>
  <!--<exec_depend>python3-webrtcvad-pip</exec_depend>-->
  <depend>python3-requests</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
