<?xml version="1.0"?>
<package format="3">
  <name>voice_chatbot_ros</name>
  <version>0.1.0</version>
  <description>ROS 2 Humble integration for the local voice chatbot pipeline.</description>

  <maintainer email="noreply@example.com">OpenAI Codex</maintainer>
  <license>Proprietary</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
