<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot</name>
  <version>0.1.0</version>
  <description>Robot launch files, controller definitions, and interfaces for SOP Robot.</description>
  <maintainer email="sop-robot@example.org">SOP Robot Team</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>action_msgs</depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>inmoov_description</exec_depend>
  <exec_depend>face_tracker</exec_depend>
  <exec_depend>face_tracker_movement</exec_depend>
  <exec_depend>chatbot_app</exec_depend>
  <exec_depend>hand_gestures</exec_depend>
  <exec_depend>shoulder_controller</exec_depend>
  <exec_depend>jaw_movement</exec_depend>
  <exec_depend>full_demo</exec_depend>
  <exec_depend>python3-yaml</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>

  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
