<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>face_tracker</name>
  <version>0.0.0</version>
  <description>Face tracker</description>
  <author>Arman Mansouri</author>
  <maintainer email="jari.jaaskela@oulu.fi">Jari Jääskelä</maintainer>
  <license>MIT</license>

  <depend>ament_index_python</depend>
  <depend>cv_bridge</depend>
  <depend>face_tracker_msgs</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>sop_robot_common</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
