<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>face_tracker_movement</name>
  <version>0.1.0</version>
  <description>ROS2 node that converts tracked faces into head and eye motion goals.</description>
  <maintainer email="sop-robot@example.org">SOP Robot Team</maintainer>
  <license>Apache-2.0</license>

  <depend>builtin_interfaces</depend>
  <depend>control_msgs</depend>
  <depend>face_tracker_msgs</depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>sop_robot_common</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
